--- a/src/pages/WaveDataManagerSLDS.page
+++ b/src/pages/WaveDataManagerSLDS.page
@@ -1,4 +1,4 @@
-<apex:page showHeader="false" standardStylesheets="false" sidebar="false" applyHtmlTag="false" applyBodyTag="false" controller="WaveDataManagerController" action="{!pageLoad}" docType="html-5.0">
+<apex:page showHeader="true" standardStylesheets="false" sidebar="false" applyHtmlTag="true" applyBodyTag="false" controller="WaveDataManagerController" action="{!pageLoad}" docType="html-5.0">
 	<html xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" lang="en">
 	<head>
 		<meta charset="utf-8" />
